@startuml DKAvisen_ERD

!define TABLE(x) entity x << (T,orchid) >>
!define PRIMARY_KEY(x) <u>x</u>
!define FOREIGN_KEY(x) #x

left to right direction

TABLE("Journalists") {
   PRIMARY_KEY(Journalist_ID)
   first_name
   last_name
   CPR_number
   street_name
   civic_number
   city
   ZIP_code
   country
   telephone_number
   email_address
}

TABLE("Newspapers") {
   PRIMARY_KEY(Newspaper_ID)
   title
   founding_date
   periodicity
}

TABLE("Editions") {
   PRIMARY_KEY(Edition_ID)
   FOREIGN_KEY(Newspaper_ID)
   publication_date
   FOREIGN_KEY(Editor_ID)
}

TABLE("Articles") {
   PRIMARY_KEY(Article_ID)
   FOREIGN_KEY(Edition_ID)
   title
   text
   topic
   read_count
}

TABLE("Photos") {
   PRIMARY_KEY(Photo_ID)
   title
   shot_date
   FOREIGN_KEY(Reporter_ID)
}

TABLE("ArticleJournalists") {
   FOREIGN_KEY(Article_ID)
   FOREIGN_KEY(Journalist_ID)
   FOREIGN_KEY(Role)
}

TABLE("ArticlePhotos") {
   FOREIGN_KEY(Article_ID)
   FOREIGN_KEY(Photo_ID)
}

TABLE("Roles") {
   PRIMARY_KEY(Role_name)
}

Roles::Role_name <-- ArticleJournalists::Role
Journalists::Journalist_ID <-- ArticleJournalists::Journalist_ID
Articles::Article_ID <-- ArticlePhotos::Article_ID
Photos::Photo_ID <-- ArticlePhotos::Photo_ID
ArticleJournalists::Article_ID --> Articles::Article_ID
Articles::Edition_ID --> Editions::Edition_ID
Editions::Newspaper_ID --> Newspapers::Newspaper_ID
Editions::Editor_ID --> ArticleJournalists::Journalist_ID
Photos::Reporter_ID --> Journalists::Journalist_ID

@enduml
